--- a/package.json
+++ b/package.json
@@ -1,39 +1,40 @@
 {
-    "name": "react-codesandbox",
-    "version": "0.1.0",
-    "private": true,
+    "name": "react-18-material-starter",
+    "version": "1.0.0",
+    "description": "",
+    "keywords": [],
+    "main": "src/index.tsx",
     "dependencies": {
-        "@testing-library/jest-dom": "^5.9.0",
-        "@testing-library/react": "^10.2.1",
-        "@testing-library/user-event": "^11.4.0",
-        "react": "^18.2.0",
-        "react-dom": "^18.2.0",
-        "react-scripts": "^3.4.1"
+      "@emotion-icons/material-outlined": "3.14.0",
+      "@emotion/react": "11.10.5",
+      "@emotion/styled": "11.10.5",
+      "@fontsource/roboto": "4.5.8",
+      "@mui/icons-material": "5.10.9",
+      "@mui/material": "5.10.13",
+      "@testing-library/jest-dom": "6.1.4",
+      "@testing-library/react": "14.1.0",
+      "@testing-library/user-event": "14.5.1",
+      "jotai": "1.9.2",
+      "react": "^18.2.0",
+      "react-dom": "^18.0.2",
+      "react-scripts": "5.0.1"
+    },
+    "devDependencies": {
+      "@types/react": "^18.0.2",
+      "@types/react-dom": "^18.0.2",
+      "typescript": "4.4.2"
     },
     "scripts": {
-        "start": "cross-env NODE_OPTIONS=--openssl-legacy-provider react-scripts start",
-        "build": "react-scripts build",
-        "test": "react-scripts test",
-        "format": "prettier --write \"**/*.+(js|json|css|md|mdx|html)\""
-    },
-    "eslintConfig": {
-        "extends": "react-app"
-    },
-    "husky": {
-        "hooks": {
-            "pre-commit": "lint-staged && npm run build"
-        }
+      "start": "react-scripts start",
+      "build": "react-scripts build",
+      "test": "react-scripts test --env=jsdom",
+      "eject": "react-scripts eject"
     },
     "browserslist": [
-        ">0.2%",
-        "not dead",
-        "not ie <= 11",
-        "not op_mini all"
-    ],
-    "devDependencies": {
-        "cross-env": "^7.0.3",
-        "husky": "^4.2.3",
-        "lint-staged": "^10.0.8",
-        "prettier": "^1.19.1"
-    }
-}
+      ">0.2%",
+      "not dead",
+      "not ie <= 11",
+      "not op_mini all"
+    ]
+  }
+  
